commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chart.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chart.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Chart#axes:member'
@@ -44,7 +44,7 @@ items:
       - 'excel!Excel.Chart#worksheet:member'
   - uid: 'excel!Excel.Chart#axes:member'
     summary: |-
-      表示图表坐标轴。 只读。
+      表示图表坐标轴。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
@@ -59,7 +59,7 @@ items:
           - 'excel!Excel.ChartAxes:class'
   - uid: 'excel!Excel.Chart#chartType:member'
     summary: |-
-      表示图表的类型。 有关详细信息，请参阅 ChartType。
+      指定图表的类型。 有关详细信息，请参阅 ChartType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
@@ -86,7 +86,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Chart#dataLabels:member'
     summary: |-
-      表示图表上的数据标签。 只读。
+      表示图表上的数据标签。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
@@ -133,7 +133,7 @@ items:
           ```
   - uid: 'excel!Excel.Chart#format:member'
     summary: |-
-      封装图表区域的格式属性。 只读。
+      封装图表区域的格式属性。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -222,7 +222,7 @@ items:
             - '"Fit" | "FitAndCenter" | "Fill"'
   - uid: 'excel!Excel.Chart#height:member'
     summary: |-
-      表示 chart 对象的高度，以磅值表示。
+      指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -237,7 +237,7 @@ items:
           - number
   - uid: 'excel!Excel.Chart#id:member'
     summary: |-
-      图表的唯一 ID。 只读。
+      图表的唯一 ID。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -267,7 +267,7 @@ items:
           - number
   - uid: 'excel!Excel.Chart#legend:member'
     summary: |-
-      表示图表的图例。 只读。
+      表示图表的图例。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
@@ -385,7 +385,7 @@ items:
                       }
   - uid: 'excel!Excel.Chart#name:member'
     summary: |-
-      表示 chart 对象的名称。
+      指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -423,7 +423,7 @@ items:
           ```
   - uid: 'excel!Excel.Chart#series:member'
     summary: |-
-      表示单个系列或图表中的系列集合。 只读。
+      表示单个系列或图表中的系列集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
@@ -461,7 +461,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Chart#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -597,7 +597,7 @@ items:
             - 'excel!Excel.Chart#setPosition~1:complex'
   - uid: 'excel!Excel.Chart#showAllFieldButtons:member'
     summary: |-
-      表示是否在数据透视图上显示所有字段按钮。
+      指定是否在数据透视图上显示所有字段按钮。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
@@ -612,7 +612,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Chart#title:member'
     summary: |-
-      表示指定图表的标题，包括标题的文本、可见性、位置和格式。 只读。
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -640,7 +640,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Chart#top:member'
     summary: |-
-      表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -655,7 +655,7 @@ items:
           - number
   - uid: 'excel!Excel.Chart#width:member'
     summary: |-
-      表示 chart 对象的宽度，以磅值表示。
+      指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -670,7 +670,7 @@ items:
           - number
   - uid: 'excel!Excel.Chart#worksheet:member'
     summary: |-
-      包含当前 chart 的 worksheet 对象。 只读。
+      包含当前 chart 的 worksheet 对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
@@ -684,7 +684,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartAxes:class'
     name: Excel.ChartAxes
@@ -707,7 +707,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -718,7 +718,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -733,7 +733,7 @@ references:
     name: Excel.ChartSeriesCollection
   - uid: 'excel!Excel.Interfaces.ChartUpdateData:interface'
     name: Interfaces.ChartUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Range:class'
     name: Range
