--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemloadoptions.yml
@@ -35,7 +35,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
     summary: |-
-      表示与此名称相关联的注释。
+      指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -50,7 +50,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
     summary: |-
-      对象的名称。 只读。
+      对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
     summary: |-
-      指明是否将 name 限定到工作簿或特定工作表。 可能的值为：工作表、工作簿。 只读。
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -80,7 +80,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
     summary: |-
-      指明 name 公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -95,7 +95,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
     summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
