--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.cellvalueconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.cellvalueconditionalformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.CellValueConditionalFormat#context:member'
@@ -132,7 +132,7 @@ items:
                       }
   - uid: 'excel!Excel.CellValueConditionalFormat#rule:member'
     summary: |-
-      表示此条件格式中的 Rule 对象。
+      指定此条件格式的 Rule 对象。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
@@ -188,7 +188,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.CellValueConditionalFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -221,7 +221,7 @@ items:
           - 'excel!Excel.Interfaces.CellValueConditionalFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -235,7 +235,7 @@ references:
     name: Excel.ConditionalCellValueRule
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatUpdateData:interface'
     name: Interfaces.CellValueConditionalFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatData:interface'
     name: Excel.Interfaces.CellValueConditionalFormatData
