--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotarealoadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotarealoadoptions.yml
@@ -37,7 +37,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#format:member'
     summary: |-
-      表示图表 plotArea 的格式。
+      指定图表 plotArea 的格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#height:member'
     summary: |-
-      表示 plotArea 的高度值。
+      指定 plotArea 的高度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideHeight:member'
     summary: |-
-      表示 plotArea 的 insideHeight 值。
+      指定 plotArea 的 insideHeight 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideLeft:member'
     summary: |-
-      表示 plotArea 的 insideLeft 值。
+      指定 plotArea 的 insideLeft 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
@@ -97,7 +97,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideTop:member'
     summary: |-
-      表示 plotArea 的 insideTop 值。
+      指定 plotArea 的 insideTop 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideWidth:member'
     summary: |-
-      表示 plotArea 的 insideWidth 值。
+      指定 plotArea 的 insideWidth 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#left:member'
     summary: |-
-      表示 plotArea 的 left 值。
+      指定 plotArea 的左侧值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -142,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#position:member'
     summary: |-
-      表示 plotArea 的位置。
+      指定 plotArea 的位置。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -157,7 +157,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#top:member'
     summary: |-
-      表示 plotArea 的 top 值。
+      指定 plotArea 的最高值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -172,7 +172,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#width:member'
     summary: |-
-      表示 plotArea 的宽度值。
+      指定 plotArea 的宽度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
