--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangeformatdata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFormatData#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatData#borders:member'
     summary: |-
-      应用于整体条件格式范围的 border 对象的集合。 只读。
+      应用于整体条件格式范围的 border 对象的集合。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
@@ -30,7 +30,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatData#borders~0:complex'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatData#fill:member'
     summary: |-
-      返回在整体条件格式范围上定义的 fill 对象。 只读。
+      返回在整体条件格式范围上定义的 fill 对象。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFillData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatData#font:member'
     summary: |-
-      返回在整体条件格式区域上定义的 font 对象。 只读。
+      返回在整体条件格式区域上定义的 font 对象。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
