--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartloadoptions.yml
@@ -66,7 +66,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#categoryLabelLevel:member'
     summary: |-
-      返回或设置 ChartCategoryLabelLevel 枚举常量，该常量代表分类标签源自位置的级别。 读/写。
+      指定一个 ChartCategoryLabelLevel 枚举常量，该常量引用分类标签的来源级别。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryLabelLevel
@@ -81,7 +81,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#chartType:member'
     summary: |-
-      表示图表的类型。 有关详细信息，请参阅 ChartType。
+      指定图表的类型。 有关详细信息，请参阅 ChartType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
@@ -111,7 +111,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#displayBlanksAs:member'
     summary: |-
-      返回或设置图表上的空白单元格的绘制方式。 读/写。
+      指定在图表上绘制空白单元格的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: displayBlanksAs
@@ -141,7 +141,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
     summary: |-
-      表示 chart 对象的高度，以磅值表示。
+      指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -156,7 +156,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#id:member'
     summary: |-
-      图表的唯一 ID。 只读。
+      图表的唯一 ID。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
     summary: |-
-      表示 chart 对象的名称。
+      指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -246,7 +246,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#plotBy:member'
     summary: |-
-      返回或设置图表上的列或行用作数据系列的方式。 读/写。
+      指定列或行在图表上用作数据系列的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotBy
@@ -261,7 +261,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#plotVisibleOnly:member'
     summary: |-
-      如果仅绘制可见单元格，则为 True。 如果绘制可见单元格和隐藏单元格，则为 False。 读/写。
+      如果仅绘制可见单元格，则为 True。 如果绘制可见单元格和隐藏单元格，则为 False。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotVisibleOnly
@@ -291,7 +291,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#seriesNameLevel:member'
     summary: |-
-      返回或设置 ChartSeriesNameLevel 枚举常量，该常量代表系列名称源自位置的级别。 读/写。
+      指定一个 ChartSeriesNameLevel 枚举常量，该常量引用系列名称的来源级别。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: seriesNameLevel
@@ -306,7 +306,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member'
     summary: |-
-      表示是否在数据透视图上显示所有字段按钮。
+      指定是否在数据透视图上显示所有字段按钮。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
@@ -321,7 +321,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#showDataLabelsOverMaximum:member'
     summary: |-
-      表示当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小，则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
+      指定当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小，则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDataLabelsOverMaximum
@@ -336,7 +336,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#style:member'
     summary: |-
-      返回或设置图表的图表样式。 读/写。
+      指定图表的图表样式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
@@ -351,7 +351,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
     summary: |-
-      表示指定图表的标题，包括标题的文本、可见性、位置和格式。
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -366,7 +366,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
     summary: |-
-      表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -381,7 +381,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
     summary: |-
-      表示 chart 对象的宽度，以磅值表示。
+      指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
