--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeviewdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeviewdata.yml
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Interfaces.RangeViewData#valueTypes:member'
   - uid: 'excel!Excel.Interfaces.RangeViewData#cellAddresses:member'
     summary: |-
-      表示 RangeView 的单元格地址。 只读。
+      表示 RangeView 的单元格地址。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellAddresses
@@ -38,7 +38,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#columnCount:member'
     summary: |-
-      返回可见列数。 只读。
+      可见列的数量。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -98,7 +98,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#index:member'
     summary: |-
-      返回表示 RangeView 的索引的值。 只读。
+      返回表示 RangeView 的索引的值。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -128,7 +128,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#rowCount:member'
     summary: |-
-      返回可见行数。 只读。
+      可见行的数目。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -143,7 +143,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeViewData#rows:member'
     summary: |-
-      表示一组与 range 相关联的 RangeView。 只读。
+      表示一组与 range 相关联的 RangeView。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rows
@@ -158,7 +158,7 @@ items:
           - 'excel!Excel.Interfaces.RangeViewData#rows~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeViewData#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -188,7 +188,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#valueTypes:member'
     summary: |-
-      表示每个单元格的数据类型。 只读。
+      表示每个单元格的数据类型。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
