commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.conditionaldatabarnegativeformat.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionaldatabarnegativeformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ConditionalDataBarNegativeFormat#borderColor:member'
@@ -27,7 +27,7 @@ items:
       - 'excel!Excel.ConditionalDataBarNegativeFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#borderColor:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
@@ -54,7 +54,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#fillColor:member'
     summary: |-
-      代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
@@ -131,7 +131,7 @@ items:
                       }
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#matchPositiveBorderColor:member'
     summary: |-
-      该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。
+      指定负 DataBar 的边框颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveBorderColor
@@ -146,7 +146,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#matchPositiveFillColor:member'
     summary: |-
-      该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。
+      如果为负 DataBar 的填充颜色与正 DataBar 的填充颜色相同，则指定。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveFillColor
@@ -184,7 +184,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ConditionalDataBarNegativeFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -217,7 +217,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -227,7 +227,7 @@ references:
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
     name: Interfaces.ConditionalDataBarNegativeFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatData
