--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartlegendentrydata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartlegendentrydata.yml
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#height:member'
     summary: |-
-      表示图表图例上的 legendEntry 的高度。
+      指定图表图例上的 legendEntry 的高度。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -32,7 +32,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#index:member'
     summary: |-
-      表示图表图例中的 legendEntry 的索引。
+      指定图表图例中的 legendEntry 的索引。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -47,7 +47,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#left:member'
     summary: |-
-      表示图表 legendEntry 的左侧。
+      指定图表 legendEntry 的左侧。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -62,7 +62,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#top:member'
     summary: |-
-      表示图表 legendEntry 的顶部。
+      指定图表 legendEntry 的顶部。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
