--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.lineloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.lineloadoptions.yml
@@ -102,7 +102,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.LineLoadOptions#beginConnectedSite:member'
     summary: |-
-      表示连接线始端所连接的连接站点。 只读。 当线条的始端没有附加到任何形状时，返回 null。
+      表示连接线始端所连接的连接站点。 当线条的始端没有附加到任何形状时，返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginConnectedSite
@@ -192,7 +192,7 @@ items:
           - 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.LineLoadOptions#endConnectedSite:member'
     summary: |-
-      表示连接线末端所连接的连接站点。 只读。 当线条的末端没有附加到任何形状时，返回 null。
+      表示连接线末端所连接的连接站点。 当线条的末端没有附加到任何形状时，返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endConnectedSite
@@ -207,7 +207,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.LineLoadOptions#id:member'
     summary: |-
-      表示形状标识符。 只读。
+      指定形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -222,7 +222,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.LineLoadOptions#isBeginConnected:member'
     summary: |-
-      指定指定线条的始端是否连接到形状。 只读。
+      指定是否将指定线条的起点连接到形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isBeginConnected
@@ -237,7 +237,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.LineLoadOptions#isEndConnected:member'
     summary: |-
-      指定指定线条的末端是否连接到形状。 只读。
+      指定是否将指定线条的终点连接到形状。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEndConnected
