commit translated contents

--- a/docs/docs-ref-autogen/visio/visio.yml
+++ b/docs/docs-ref-autogen/visio/visio.yml
@@ -181,7 +181,7 @@ items:
         - id: contextObject
           description: 以前创建的 RequestContext。 此上下文将由批处理函数重新使用（而不是创建新的上下文）。 这意味着批处理将能够选取对现有 API 对象所做的更改（如果这些对象是从该相同的上下文派生的）。
           type:
-            - 'visio!OfficeExtension.ClientRequestContext:class'
+            - 'office!OfficeExtension.ClientRequestContext:class'
         - id: batch
           description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Visio 应用程序的请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Visio 对象模型的访问权限。
           type:
@@ -361,12 +361,12 @@ references:
     name: OfficeExtension.ClientObject | OfficeExtension.EmbeddedSession
     fullName: OfficeExtension.ClientObject | OfficeExtension.EmbeddedSession
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: ' | '
         fullName: ' | '
-      - uid: 'visio!OfficeExtension.EmbeddedSession:class'
+      - uid: 'office!OfficeExtension.EmbeddedSession:class'
         name: OfficeExtension.EmbeddedSession
         fullName: OfficeExtension.EmbeddedSession
   - uid: 'visio!Visio.run~4:complex'
@@ -398,7 +398,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
@@ -428,7 +428,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'visio!OfficeExtension.ClientRequestContext:class'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
     name: OfficeExtension.ClientRequestContext
   - uid: 'visio!Visio.run~9:complex'
     name: '(context: Visio.RequestContext) => Promise<T>'
