--- a/docs/docs-ref-autogen/word/word/word.setting.yml
+++ b/docs/docs-ref-autogen/word/word/word.setting.yml
@@ -12,7 +12,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.Setting._replaceDateWithStringDate:member(1)'
@@ -224,7 +224,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'word!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'word!Word.Setting#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     isPreview: true
@@ -303,7 +303,7 @@ items:
         type:
           - any
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.RequestContext:class'
     name: RequestContext
@@ -313,7 +313,7 @@ references:
     name: Word.Interfaces.SettingLoadOptions
   - uid: 'word!Word.Interfaces.SettingUpdateData:interface'
     name: Interfaces.SettingUpdateData
-  - uid: 'word!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'word!Word.Interfaces.SettingData:interface'
     name: Word.Interfaces.SettingData
