--- a/docs/docs-ref-autogen/word_1_3/word/word.custompropertycollection.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.custompropertycollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.CustomPropertyCollection#add:member(1)'
@@ -248,7 +248,7 @@ items:
         - id: option
           description: ''
           type:
-            - 'word!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.CustomPropertyCollection#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.CustomPropertyCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.CustomPropertyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
@@ -289,7 +289,7 @@ items:
           - 'word!Word.CustomPropertyCollection:class'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.CustomProperty:class'
     name: Word.CustomProperty
@@ -299,7 +299,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'word!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -327,7 +327,7 @@ references:
       - uid: 'word!Word.Interfaces.CollectionLoadOptions:interface'
         name: Word.Interfaces.CollectionLoadOptions
         fullName: Word.Interfaces.CollectionLoadOptions
-  - uid: 'word!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'word!Word.Interfaces.CustomPropertyCollectionData:interface'
     name: Word.Interfaces.CustomPropertyCollectionData
