commit bilingual contents

--- a/docs/docs-ref-autogen/visio/visio.yml
+++ b/docs/docs-ref-autogen/visio/visio.yml
@@ -89,7 +89,7 @@ items:
       - 'visio!Visio.ShapeView:class'
       - 'visio!Visio.ToolBarType:enum'
   - uid: 'visio!Visio.run:function(1)'
-    summary: '<span data-ttu-id="37bf7-101">使用新的请求上下文执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="37bf7-101">Executes a batch script that performs actions on the Visio object model, using a new request context.</span></span> <span data-ttu-id="37bf7-102">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="37bf7-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用新的请求上下文执行对 Visio 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: Visio.run(batch)
     fullName: Visio.run(batch)
     langs:
@@ -103,13 +103,13 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="37bf7-103">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-103">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="37bf7-104">Context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="37bf7-104">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="37bf7-105">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="37bf7-105">Since the Office add-in and the Visio application run in two different processes, the request context is required to get access to the Visio object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Visio 应用程序的请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。
           type:
             - 'visio!Visio.run~1:complex'
       typeParameters:
         - id: T
   - uid: 'visio!Visio.run:function(2)'
-    summary: '<span data-ttu-id="37bf7-106">使用以前创建的 API 对象的请求上下文，执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="37bf7-106">Executes a batch script that performs actions on the Visio object model, using the request context of a previously-created API object.</span></span>'
+    summary: 使用以前创建的 API 对象的请求上下文，执行对 Visio 对象模型执行操作的批处理脚本。
     name: 'Visio.run(object, batch)'
     fullName: 'Visio.run(object, batch)'
     langs:
@@ -123,17 +123,17 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="37bf7-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="37bf7-107">A previously-created API object.</span></span> <span data-ttu-id="37bf7-108">批处理将使用与传入的对象相同的请求上下文，这意味着应用于该对象的任何更改都将由 "context. sync （）" 选取。</span><span class="sxs-lookup"><span data-stu-id="37bf7-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的请求上下文，这意味着应用于该对象的任何更改都将由 "context. sync （）" 选取。
           type:
             - 'visio!Visio.run~3:complex'
         - id: batch
-          description: '<span data-ttu-id="37bf7-109">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-109">A function that takes in an Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="37bf7-110">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="37bf7-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
           type:
             - 'visio!Visio.run~4:complex'
       typeParameters:
         - id: T
   - uid: 'visio!Visio.run:function(3)'
-    summary: '<span data-ttu-id="37bf7-111">使用以前创建的 API 对象的请求上下文，执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="37bf7-111">Executes a batch script that performs actions on the Visio object model, using the request context of previously-created API objects.</span></span>'
+    summary: 使用以前创建的 API 对象的请求上下文，执行对 Visio 对象模型执行操作的批处理脚本。
     name: 'Visio.run(objects, batch)'
     fullName: 'Visio.run(objects, batch)'
     langs:
@@ -147,19 +147,19 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="37bf7-112">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="37bf7-112">An array of previously-created API objects.</span></span> <span data-ttu-id="37bf7-113">将验证该数组，以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="37bf7-113">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="37bf7-114">批处理将使用此共享请求上下文，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。</span><span class="sxs-lookup"><span data-stu-id="37bf7-114">The batch will use this shared request context, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象的数组。 将验证该数组，以确保所有对象都共享相同的上下文。 批处理将使用此共享请求上下文，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。
           type:
             - 'visio!Visio.run~6:complex'
         - id: batch
-          description: '<span data-ttu-id="37bf7-115">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-115">A function that takes in a Visio.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="37bf7-116">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="37bf7-116">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
           type:
             - 'visio!Visio.run~7:complex'
       typeParameters:
         - id: T
   - uid: 'visio!Visio.run:function(4)'
-    summary: '<span data-ttu-id="37bf7-117">使用以前创建的对象的 RequestContext，执行对 Visio 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="37bf7-117">Executes a batch script that performs actions on the Visio object model, using the RequestContext of a previously-created object.</span></span> <span data-ttu-id="37bf7-118">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="37bf7-118">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用以前创建的对象的 RequestContext，执行对 Visio 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     remarks: |-
-      <span data-ttu-id="37bf7-119">除了此签名之外，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="37bf7-119">In addition to this signature, the method also has the following signatures:</span></span>
+      除了此签名之外，该方法还具有以下签名：
 
       `run<T>(batch: (context: Visio.RequestContext) => Promise<T>): Promise<T>;`
 
@@ -179,11 +179,11 @@ items:
         description: ''
       parameters:
         - id: contextObject
-          description: '<span data-ttu-id="37bf7-120">以前创建的 RequestContext。</span><span class="sxs-lookup"><span data-stu-id="37bf7-120">A previously-created Visio.RequestContext.</span></span> <span data-ttu-id="37bf7-121">此上下文将由批处理函数重新使用（而不是创建新的上下文）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-121">This context will get re-used by the batch function (instead of having a new context created).</span></span> <span data-ttu-id="37bf7-122">这意味着批处理将能够选取对现有 API 对象所做的更改（如果这些对象是从该相同的上下文派生的）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-122">This means that the batch will be able to pick up changes made to existing API objects, if those objects were derived from this same context.</span></span>'
+          description: 以前创建的 RequestContext。 此上下文将由批处理函数重新使用（而不是创建新的上下文）。 这意味着批处理将能够选取对现有 API 对象所做的更改（如果这些对象是从该相同的上下文派生的）。
           type:
-            - 'visio!OfficeExtension.ClientRequestContext:class'
+            - 'office!OfficeExtension.ClientRequestContext:class'
         - id: batch
-          description: '<span data-ttu-id="37bf7-123">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="37bf7-123">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="37bf7-124">Context 参数可促进对 Visio 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="37bf7-124">The context parameter facilitates requests to the Visio application.</span></span> <span data-ttu-id="37bf7-125">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="37bf7-125">Since the Office add-in and the Visio application run in two different processes, the RequestContext is required to get access to the Visio object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Visio 应用程序的请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Visio 对象模型的访问权限。
           type:
             - 'visio!Visio.run~9:complex'
       typeParameters:
@@ -361,12 +361,12 @@ references:
     name: OfficeExtension.ClientObject | OfficeExtension.EmbeddedSession
     fullName: OfficeExtension.ClientObject | OfficeExtension.EmbeddedSession
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: ' | '
         fullName: ' | '
-      - uid: 'visio!OfficeExtension.EmbeddedSession:class'
+      - uid: 'office!OfficeExtension.EmbeddedSession:class'
         name: OfficeExtension.EmbeddedSession
         fullName: OfficeExtension.EmbeddedSession
   - uid: 'visio!Visio.run~4:complex'
@@ -398,7 +398,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
@@ -428,7 +428,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'visio!OfficeExtension.ClientRequestContext:class'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
     name: OfficeExtension.ClientRequestContext
   - uid: 'visio!Visio.run~9:complex'
     name: '(context: Visio.RequestContext) => Promise<T>'
