--- a/docs/docs-ref-autogen/word/word/word.setting.yml
+++ b/docs/docs-ref-autogen/word/word/word.setting.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.Setting:class'
     summary: |-
-      <span data-ttu-id="e5415-101">代表加载项的设置。</span><span class="sxs-lookup"><span data-stu-id="e5415-101">Represents a setting of the add-in.</span></span>
+      代表加载项的设置。
 
-      <span data-ttu-id="e5415-102">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5415-102">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: Word.Setting
     fullName: Word.Setting
@@ -12,7 +12,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.Setting._replaceDateWithStringDate:member(1)'
@@ -47,7 +47,7 @@ items:
           type:
             - any
   - uid: 'word!Word.Setting#context:member'
-    summary: <span data-ttu-id="e5415-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="e5415-103">The request context associated with the object.</span></span> <span data-ttu-id="e5415-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="e5415-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     isPreview: true
     name: context
     fullName: context
@@ -61,9 +61,9 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.Setting#delete:member(1)'
     summary: |-
-      <span data-ttu-id="e5415-105">删除 Setting 对象。</span><span class="sxs-lookup"><span data-stu-id="e5415-105">Deletes the setting.</span></span>
+      删除 Setting 对象。
 
-      <span data-ttu-id="e5415-106">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5415-106">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: delete()
     fullName: delete()
@@ -78,7 +78,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="e5415-107">示例</span><span class="sxs-lookup"><span data-stu-id="e5415-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Run a batch operation against the Word object model.
@@ -119,9 +119,9 @@ items:
           ```
   - uid: 'word!Word.Setting#key:member'
     summary: |-
-      <span data-ttu-id="e5415-108">获取设置的键。</span><span class="sxs-lookup"><span data-stu-id="e5415-108">Gets the key of the setting.</span></span> <span data-ttu-id="e5415-109">只读。</span><span class="sxs-lookup"><span data-stu-id="e5415-109">Read only.</span></span>
+      获取设置的键。 只读。
 
-      <span data-ttu-id="e5415-110">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5415-110">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: key
     fullName: key
@@ -134,15 +134,15 @@ items:
         type:
           - string
   - uid: 'word!Word.Setting#load:member(1)'
-    summary: <span data-ttu-id="e5415-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e5415-112">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="e5415-112">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="e5415-113">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="e5415-113">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="e5415-114">`load(option?: string | string[]): Word.Setting`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-114">`load(option?: string | string[]): Word.Setting` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Word.Setting`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="e5415-115">`load(option?: { select?: string; expand?: string; }): Word.Setting`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-115">`load(option?: { select?: string; expand?: string; }): Word.Setting` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Word.Setting`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="e5415-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Setting`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="e5415-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Setting` - Only available on collection types.</span></span> <span data-ttu-id="e5415-117">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="e5415-117">It is similar to the preceding signature.</span></span> <span data-ttu-id="e5415-118">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="e5415-118">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="e5415-119">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="e5415-119">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="e5415-120">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="e5415-120">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Setting`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     isPreview: true
     name: load(option)
     fullName: load(option)
@@ -161,7 +161,7 @@ items:
           type:
             - 'word!Word.Interfaces.SettingLoadOptions:interface'
   - uid: 'word!Word.Setting#load:member(2)'
-    summary: <span data-ttu-id="e5415-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e5415-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e5415-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -176,11 +176,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="e5415-123">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-123">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'word!Word.Setting#load:member(3)'
-    summary: <span data-ttu-id="e5415-124">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-124">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e5415-125">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e5415-125">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
@@ -195,13 +195,13 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="e5415-126">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-126">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'word!Word.Setting#set:member(1)'
-    summary: '<span data-ttu-id="e5415-127">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-127">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="e5415-128">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="e5415-128">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="e5415-129">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="e5415-129">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Word.Setting): void`
     isPreview: true
@@ -218,15 +218,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="e5415-130">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-130">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'word!Word.Interfaces.SettingUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="e5415-131">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="e5415-131">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'word!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'word!Word.Setting#set:member(2)'
-    summary: '<span data-ttu-id="e5415-132">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="e5415-132">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     isPreview: true
     name: set(properties)
     fullName: set(properties)
@@ -245,7 +245,7 @@ items:
           type:
             - 'word!Word.Setting:class'
   - uid: 'word!Word.Setting#toJSON:member(1)'
-    summary: '<span data-ttu-id="e5415-133">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="e5415-133">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="e5415-134">.</span><span class="sxs-lookup"><span data-stu-id="e5415-134"></span></span> <span data-ttu-id="e5415-135">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="e5415-135"></span></span><!-- --><span data-ttu-id="e5415-136">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Word。设置对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.SettingData`</span><span class="sxs-lookup"><span data-stu-id="e5415-136">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Word.Setting object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Word.Interfaces.SettingData`</span></span><!-- --><span data-ttu-id="e5415-137">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="e5415-137">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Word。设置对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Word.Interfaces.SettingData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     isPreview: true
     name: toJSON()
     fullName: toJSON()
@@ -259,7 +259,7 @@ items:
           - 'word!Word.Interfaces.SettingData:interface'
         description: ''
   - uid: 'word!Word.Setting#track:member(1)'
-    summary: '<span data-ttu-id="e5415-138">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="e5415-138">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="e5415-139">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="e5415-139">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="e5415-140">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="e5415-140">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     isPreview: true
     name: track()
     fullName: track()
@@ -273,7 +273,7 @@ items:
           - 'word!Word.Setting:class'
         description: ''
   - uid: 'word!Word.Setting#untrack:member(1)'
-    summary: '<span data-ttu-id="e5415-141">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="e5415-141">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="e5415-142">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="e5415-142">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="e5415-143">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="e5415-143">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="e5415-144">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="e5415-144">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     isPreview: true
     name: untrack()
     fullName: untrack()
@@ -288,9 +288,9 @@ items:
         description: ''
   - uid: 'word!Word.Setting#value:member'
     summary: |-
-      <span data-ttu-id="e5415-145">获取或设置设置的值。</span><span class="sxs-lookup"><span data-stu-id="e5415-145">Gets or sets the value of the setting.</span></span>
+      获取或设置设置的值。
 
-      <span data-ttu-id="e5415-146">\[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5415-146">\[ [API set: WordApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     isPreview: true
     name: value
     fullName: value
@@ -303,7 +303,7 @@ items:
         type:
           - any
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.RequestContext:class'
     name: RequestContext
@@ -313,7 +313,7 @@ references:
     name: Word.Interfaces.SettingLoadOptions
   - uid: 'word!Word.Interfaces.SettingUpdateData:interface'
     name: Interfaces.SettingUpdateData
-  - uid: 'word!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'word!Word.Interfaces.SettingData:interface'
     name: Word.Interfaces.SettingData
