commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartseriesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartseriesdata.yml
@@ -36,7 +36,7 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesData#varyByCategories:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#axisGroup:member'
     summary: |-
-      返回或设置指定系列的组。 读/写
+      指定指定系列的组。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -96,7 +96,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#explosion:member'
     summary: |-
-      返回或设置饼图或圆环图切片的分解程度值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。 读/写。
+      指定饼图或圆环图切片的爆炸值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: explosion
@@ -111,7 +111,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#filtered:member'
     summary: |-
-      该布尔值表示是否筛选系列。 不适用于曲面图。
+      指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -126,7 +126,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#firstSliceAngle:member'
     summary: |-
-      返回或设置第一个饼图或圆环图切片的角度，以度为单位（从垂直方向起为顺时针）。 只适用于饼图、三维饼图和圆环图。 可以是 0 到 360 之间的值。 读/写
+      指定第一个饼图或圆环图的扇区的角度（以度为单位（从垂直方向顺时针方向）。 只适用于饼图、三维饼图和圆环图。 可以是0到360之间的值。指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstSliceAngle
@@ -141,7 +141,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#format:member'
     summary: |-
-      表示图表系列的格式，包括填充和线条格式。 只读。
+      表示图表系列的格式，包括填充和线条格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -171,7 +171,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#hasDataLabels:member'
     summary: |-
-      该布尔值表示系列是否具有数据标签。
+      指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -186,7 +186,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#invertIfNegative:member'
     summary: |-
-      如果 Excel 在值为负数时反转项目中的图案，则为 True。 读/写。
+      如此如果当 Excel 中的模式与一个负数相对应时反转该模式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertIfNegative
@@ -201,7 +201,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerBackgroundColor:member'
     summary: |-
-      表示图表系列的标记背景色。
+      指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -216,7 +216,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerForegroundColor:member'
     summary: |-
-      表示图表系列的标记前景色。
+      指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -231,7 +231,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerSize:member'
     summary: |-
-      表示图表系列的标记大小。
+      指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -246,7 +246,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -261,7 +261,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -276,7 +276,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#overlap:member'
     summary: |-
-      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。 读/写。
+      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlap
@@ -291,7 +291,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#plotOrder:member'
     summary: |-
-      表示图表组中某个图表系列的绘制顺序。
+      指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -306,7 +306,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#points:member'
     summary: |-
-      表示系列中所有数据点的集合。 只读。
+      返回系列中所有数据点的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
@@ -321,7 +321,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#points~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#secondPlotSize:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图的辅助分区的大小，以占主饼图大小的百分比表示。 可以是 5 到 200 之间的值。 读/写。
+      指定复合饼图或复合条饼图中的第二部分的大小（以主饼图大小的百分比表示）。 可以是 5 到 200 之间的值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: secondPlotSize
@@ -336,7 +336,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#showShadow:member'
     summary: |-
-      表示系列是否具有阴影的布尔值。
+      指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -351,7 +351,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#smooth:member'
     summary: |-
-      该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
@@ -366,7 +366,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#splitType:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图中两个分区的拆分方式。 读/写。
+      指定拆分复合饼图或复合条饼图条形图的两个部分的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitType
@@ -381,7 +381,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#splitType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#trendlines:member'
     summary: |-
-      表示系列中趋势线的集合。 只读。
+      系列中趋势线的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: trendlines
@@ -396,7 +396,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#trendlines~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#varyByCategories:member'
     summary: |-
-      如果 Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。 读/写。
+      如此如果 Excel 为每个数据标记分配不同的颜色或图案。 图表必须只包含一个系列。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: varyByCategories
