--- a/docs/docs-ref-autogen/outlook/outlook/office.customproperties.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.customproperties.yml
@@ -17,6 +17,7 @@ items:
     package: outlook!
     children:
       - 'outlook!Office.CustomProperties#get:member(1)'
+      - 'outlook!Office.CustomProperties#getAll:member(1)'
       - 'outlook!Office.CustomProperties#remove:member(1)'
       - 'outlook!Office.CustomProperties#saveAsync:member(1)'
       - 'outlook!Office.CustomProperties#set:member(1)'
@@ -52,6 +53,30 @@ items:
           description: 要返回的自定义属性的名称。
           type:
             - string
+  - uid: 'outlook!Office.CustomProperties#getAll:member(1)'
+    summary: |-
+      返回一个具有名称/值对集合中的所有自定义属性的对象。 以下是等效项。
+
+      `customProps.get("name")`
+
+      `var dictionary = customProps.getAll(); dictionary["name"]`
+
+      可以循环访问 dictionary 对象，以发现全部`names`和`values`<!-- -->.
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+    name: getAll()
+    fullName: getAll()
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getAll(): any;'
+      return:
+        type:
+          - any
+        description: 一个具有名称/值对集合中的所有自定义属性的对象。
   - uid: 'outlook!Office.CustomProperties#remove:member(1)'
     summary: |-
       从自定义属性集合中移除指定的属性。
