--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
@@ -44,7 +44,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#rule:member'
     summary: |-
-      表示此条件格式中的 Rule 对象。
+      指定此条件格式的 Rule 对象。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
