--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartareaformatdata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#border:member'
     summary: |-
-      代表图表区域的边框格式，包括颜色、linestyle 和粗细。 只读。
+      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -30,7 +30,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme:member'
     summary: |-
-      返回或设置图表的配色方案。 读/写。
+      指定图表的配色方案。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: colorScheme
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
     summary: |-
-      表示当前对象的字体属性（字体名称、字体大小、颜色等）。 只读。
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -60,7 +60,7 @@ items:
           - 'excel!Excel.Interfaces.ChartFontData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
     summary: |-
-      指定图表的图表区域是否有圆角。 读/写。
+      指定图表的图表区是否有圆角。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: roundedCorners
