--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartmapoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartmapoptions.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartMapOptions#context:member'
@@ -38,7 +38,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartMapOptions#labelStrategy:member'
     summary: |-
-      返回或设置区域地图图表的系列地图标签策略。 读/写。
+      指定区域地图图表的系列地图标签策略。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: labelStrategy
@@ -53,7 +53,7 @@ items:
           - 'excel!Excel.ChartMapOptions#labelStrategy~0:complex'
   - uid: 'excel!Excel.ChartMapOptions#level:member'
     summary: |-
-      返回或设置区域地图图表的系列映射级别。 读/写。
+      指定区域映射图表的系列映射级别。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
@@ -130,7 +130,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartMapOptions#projectionType:member'
     summary: |-
-      返回或设置区域地图图表的系列投影类型。 读/写。
+      指定区域地图图表的系列投影类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: projectionType
@@ -168,7 +168,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartMapOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartMapOptionsData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -238,7 +238,7 @@ references:
         fullName: ' | "Automatic" | "Mercator" | "Miller" | "Robinson" | "Albers"'
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData:interface'
     name: Interfaces.ChartMapOptionsUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsData:interface'
     name: Excel.Interfaces.ChartMapOptionsData
