--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.charterrorbarsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.charterrorbarsloadoptions.yml
@@ -32,7 +32,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#endStyleCap:member'
     summary: |-
-      指定误差线是否具有终止端样式。
+      指定误差线是否具有最终样式帽。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
