--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.commentreplydata.yml
@@ -15,6 +15,7 @@ items:
       - 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
       - 'excel!Excel.Interfaces.CommentReplyData#id:member'
       - 'excel!Excel.Interfaces.CommentReplyData#mentions:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
       - 'excel!Excel.Interfaces.CommentReplyData#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
     summary: |-
@@ -48,7 +49,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentReplyData#content:member'
     summary: |-
-      获取或设置批注回复的内容。 字符串为纯文本。
+      批注答复的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -78,7 +79,7 @@ items:
           - '!Date:interface'
   - uid: 'excel!Excel.Interfaces.CommentReplyData#id:member'
     summary: |-
-      表示批注回复标识符。 只读。
+      指定批注答复标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -93,9 +94,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentReplyData#mentions:member'
     summary: |-
-      获取注释中提到的实体（如人员）。
+      注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -106,11 +107,26 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.CommentReplyData#mentions~0:complex'
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
+    summary: |-
+      批注答复状态。 值为 "true" 表示答复处于 "已解决" 状态。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: resolved
+    fullName: resolved
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'resolved?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.CommentReplyData#richContent:member'
     summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
+      丰富的注释内容（例如，注释中提到的内容）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
